// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Joyride > Custom Options > should render STEP 1 Tooltip with custom styles > overlay 1`] = `
<div
  aria-hidden="true"
  class="react-joyride__overlay"
  data-testid="overlay"
  style="height: 50px; pointer-events: none; bottom: 0px; left: 0px; overflow: hidden; position: absolute; right: 0px; top: 0px; z-index: 100;"
>
  <svg
    class="react-joyride__spotlight"
    data-testid="spotlight"
    style="height: 50px; left: 0px; position: absolute; top: 0px; width: 1024px;"
  >
    <path
      d="M0 0H1024V50H0Z M-6 -10H6A4 4 0 0 1 10 -6V6A4 4 0 0 1 6 10H-6A4 4 0 0 1 -10 6V-6A4 4 0 0 1 -6 -10Z"
      fill="rgba(0, 0, 0, 0.3)"
      fill-rule="evenodd"
      style="cursor: pointer; pointer-events: auto;"
    />
    <path
      d="M-6 -10H6A4 4 0 0 1 10 -6V6A4 4 0 0 1 6 10H-6A4 4 0 0 1 -10 6V-6A4 4 0 0 1 -6 -10Z"
      fill="rgba(0, 0, 0, 0.3)"
      style="opacity: 0; pointer-events: none; transition: opacity 0.2s;"
    />
  </svg>
</div>
`;

exports[`Joyride > Custom Options > should render STEP 1 Tooltip with custom styles > tooltip 1`] = `
<div
  class="react-joyride__floater"
  data-testid="floater"
  id="react-joyride-step-0"
  style="left: 0px; position: absolute; top: 0px; z-index: 200; display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; transition: opacity 0.3s; transform: translate(5px, 36px);"
>
  <div
    aria-describedby="joyride-tooltip-content"
    aria-label="The first step of many! Keep walking!"
    aria-modal="true"
    class="react-joyride__tooltip"
    data-joyride-step="0"
    role="alertdialog"
    style="background-color: rgb(255, 255, 255); box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; position: relative; width: 380px; border-radius: 8px; padding: 12px;"
  >
    <div
      style="line-height: 1.4; text-align: center;"
    >
      <div
        id="joyride-tooltip-content"
        style="padding: 1px 8px;"
      >
        The first step of many! Keep walking!
      </div>
    </div>
    <div
      style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
    >
      <div
        style="flex: 1 1 0%;"
      >
        <button
          aria-label="Skip"
          aria-live="off"
          data-action="skip"
          data-testid="button-skip"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0px; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; -webkit-appearance: none; padding: 8px;"
          title="Skip"
          type="button"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Next"
        data-action="primary"
        data-testid="button-primary"
        role="button"
        style="border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; padding: 8px; background-color: rgb(169, 71, 255);"
        title="Next"
        type="button"
      >
        Next
      </button>
    </div>
    <button
      aria-label="Close"
      data-action="close"
      data-testid="button-close"
      role="button"
      style="background-color: transparent; border: 0px; border-radius: 0px; cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; padding: 15px; position: absolute; right: 0px; top: 0px;"
      title="Close"
      type="button"
    >
      <svg
        height="14px"
        preserveAspectRatio="xMidYMid"
        version="1.1"
        viewBox="0 0 18 18"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
            fill="#000"
          />
        </g>
      </svg>
    </button>
  </div>
  <span
    class="react-joyride__arrow"
    data-testid="arrow"
    style="align-items: center; color: rgb(92, 255, 71); display: inline-flex; justify-content: center; position: absolute; top: -16px; left: -1px; width: 32px; height: 16px;"
  >
    <svg
      height="16"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="currentColor"
        points="32,16 16,0 0,16"
      />
    </svg>
  </span>
</div>
`;

exports[`Joyride > Custom Options > should render STEP 1 with custom beacon styles 1`] = `
<button
  aria-label="Open the dialog"
  class="react-joyride__beacon"
  data-testid="button-beacon"
  style="background-color: transparent; border: 0px; border-radius: 50%; color: rgb(85, 85, 85); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; display: inline-flex; position: relative;"
  title="Open the dialog"
  type="button"
>
  <span
    style="height: 36px; width: 36px;"
  >
    <span
      style="animation: joyride-beacon-outer 1.2s infinite ease-in-out; border: 2px rgb(169, 71, 255); border-radius: 50%; box-sizing: border-box; display: block; height: 100%; left: 0px; opacity: 0.9; position: absolute; top: 0px; transform-origin: center; width: 100%; background-color: rgba(255, 94, 94, 0.5);"
    />
    <span
      style="animation: joyride-beacon-inner 1.2s infinite ease-in-out; border-radius: 50%; display: block; height: 50%; left: 50%; opacity: 0.7; position: absolute; top: 50%; transform: translate(-50%, -50%); width: 50%; background-color: rgb(255, 225, 102);"
    />
  </span>
</button>
`;

exports[`Joyride > Custom Options > should render STEP 3 Tooltip with custom arrow and locale 1`] = `
<div
  class="react-joyride__floater"
  data-testid="floater"
  id="react-joyride-step-2"
  style="left: 0px; position: absolute; top: 0px; z-index: 200; display: inline-block; filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.3)); max-width: 100%; opacity: 1; transition: opacity 0.3s; transform: translate(5px, 36px);"
>
  <div
    aria-describedby="joyride-tooltip-content"
    aria-label="We are the peopleYes, we are, and we are here to make sure all our rights are secure."
    aria-modal="true"
    class="react-joyride__tooltip"
    data-joyride-step="2"
    role="alertdialog"
    style="background-color: rgb(255, 255, 255); box-sizing: border-box; color: rgb(51, 51, 51); font-size: 16px; max-width: 100%; position: relative; width: 380px; border-radius: 8px; padding: 12px;"
  >
    <div
      style="line-height: 1.4; text-align: center;"
    >
      <div
        id="joyride-tooltip-content"
        style="padding: 1px 8px;"
      >
        <div>
          <h3>
            We are the people
          </h3>
          <p>
            Yes, we are, and we are here to make sure all our rights are secure.
          </p>
        </div>
      </div>
    </div>
    <div
      style="align-items: center; display: flex; justify-content: flex-end; margin-top: 15px;"
    >
      <div
        style="flex: 1 1 0%;"
      >
        <button
          aria-label="Skip"
          aria-live="off"
          data-action="skip"
          data-testid="button-skip"
          role="button"
          style="background-color: transparent; border: 0px; border-radius: 0px; color: rgb(51, 51, 51); cursor: pointer; font-size: 14px; line-height: 1; -webkit-appearance: none; padding: 8px;"
          title="Skip"
          type="button"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Back"
        data-action="back"
        data-testid="button-back"
        role="button"
        style="background-color: transparent; border: 0px; border-radius: 0px; color: rgb(255, 0, 0); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; padding: 8px; margin-left: auto; margin-right: 5px;"
        title="Back"
        type="button"
      >
        Back
      </button>
      <button
        aria-label="Next"
        data-action="primary"
        data-testid="button-primary"
        role="button"
        style="border: 0px; border-radius: 4px; color: rgb(255, 255, 255); cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; padding: 8px; background-color: rgb(169, 71, 255);"
        title="Next"
        type="button"
      >
        Next
      </button>
    </div>
    <button
      aria-label="Close"
      data-action="close"
      data-testid="button-close"
      role="button"
      style="background-color: transparent; border: 0px; border-radius: 0px; cursor: pointer; font-size: 16px; line-height: 1; -webkit-appearance: none; padding: 15px; position: absolute; right: 0px; top: 0px;"
      title="Close"
      type="button"
    >
      <svg
        height="14px"
        preserveAspectRatio="xMidYMid"
        version="1.1"
        viewBox="0 0 18 18"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M8.13911129,9.00268191 L0.171521827,17.0258467 C-0.0498027049,17.248715 -0.0498027049,17.6098394 0.171521827,17.8327545 C0.28204354,17.9443526 0.427188206,17.9998706 0.572051765,17.9998706 C0.71714958,17.9998706 0.862013139,17.9443526 0.972581703,17.8327545 L9.0000937,9.74924618 L17.0276057,17.8327545 C17.1384085,17.9443526 17.2832721,17.9998706 17.4281356,17.9998706 C17.5729992,17.9998706 17.718097,17.9443526 17.8286656,17.8327545 C18.0499901,17.6098862 18.0499901,17.2487618 17.8286656,17.0258467 L9.86135722,9.00268191 L17.8340066,0.973848225 C18.0553311,0.750979934 18.0553311,0.389855532 17.8340066,0.16694039 C17.6126821,-0.0556467968 17.254037,-0.0556467968 17.0329467,0.16694039 L9.00042166,8.25611765 L0.967006424,0.167268345 C0.745681892,-0.0553188426 0.387317931,-0.0553188426 0.165993399,0.167268345 C-0.0553311331,0.390136635 -0.0553311331,0.751261038 0.165993399,0.974176179 L8.13920499,9.00268191 L8.13911129,9.00268191 Z"
            fill="#000"
          />
        </g>
      </svg>
    </button>
  </div>
  <span
    class="react-joyride__arrow"
    data-testid="arrow"
    style="align-items: center; color: rgb(92, 255, 71); display: inline-flex; justify-content: center; position: absolute; top: -16px; left: -1px; width: 32px; height: 16px;"
  >
    <svg
      height="16"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="currentColor"
        points="32,16 16,0 0,16"
      />
    </svg>
  </span>
</div>
`;
